2010-09-09 Tejas Belagod  <tejas.belagod@arm.com>

	* config/tc-arm.c (md_apply_fix): Check if widened add, sub are
	flag-setting and handle accordingly.

2010-09-09  Nick Clifton  <nickc@redhat.com>

	PR gas/11972
	* config/tc-arm.c (parse_big_immediate): Allow for bignums being
	extended to the size of a .octa.

2010-09-08  Julian Brown  <julian@codesourcery.com>

	* config/tc-arm.c (create_neon_reg_alias): Deal with case
	sensitivity.

2010-09-08  Nick Clifton  <nickc@redhat.com>

	PR gas/11973
	* config/tc-mn10300.c (md_convert_frag): Zero out top two bytes of
	long call instruction's displacement.

2010-09-03  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/11974
	* config/tc-i386.c (i386_finalize_immediate): Check flag_code
	instead of use_rela_relocations for 64bit.

2010-09-02  Richard Henderson  <rth@redhat.com>

	* dw2gencfi.c (TC_DWARF2_EMIT_OFFSET): Provide default.
	(output_fde): Use it.  Make sure to fully init exp before using it.

2010-08-31  Kai Tietz  <kai.tietz@onevision.com>

	* config/obj-coff-seh.c (obj_coff_seh_save): Correct comparison.
	(obj_coff_seh_stackalloc): Likewise.

2010-08-31  Alan Modra  <amodra@gmail.com>

	* config/obj-elf.c (obj_elf_init_stab_section): Fix assertion.

2010-08-30  Richard Henderson   <rth@redhat.com>

	* config/obj-coff-seh.c: Rewrite the entire file.
	(symtab, symptr, reltab, relcount, relsize): Remove.
	(seh_ctx_root, seh_ctx): Remove.
	(xdata_seg, xdata_subseg, pdata_seg): New.
	(switch_xdata, switch_pdata): New.
	(verify_context, verify_context_and_target, skip_whitespace_and_comma):
	New parsing functions.  Rewrite all parsing functions to use them.
	(obj_coff_seh_32): Fix != arm thinko.
	(obj_coff_seh_handler): For x64, don't accept handler pointer here,
	only flags.
	(obj_coff_seh_handlerdata): New.
	(do_seh_endproc): Split out of ...
	(obj_coff_seh_endproc): ... here.
	(obj_coff_seh_proc): Use it, if needed.
	(seh_x64_make_prologue_element): Use XRESIZEVEC, symbol_temp_new_now.